[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Textbox.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://UI/TextboxTextures/DefaultStyleBox.tres" type="StyleBox" id=3]
[ext_resource path="res://resources/textbox/textboxTest.tres" type="Resource" id=4]
[ext_resource path="res://resources/font_adventurer_dynamic.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/assets/Font/Adventurer.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://resources/assets/Font/Adventurer.ttf"

[sub_resource type="DynamicFont" id=1]
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[node name="Textbox" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )
data = ExtResource( 4 )

[node name="TextureLeft" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = 288.0
margin_right = 192.0
margin_bottom = 416.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 2 )
expand = true

[node name="TextureRight" type="TextureRect" parent="."]
margin_left = 832.0
margin_top = 288.0
margin_right = 960.0
margin_bottom = 416.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 2 )
expand = true

[node name="TextBoxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -200.0
margin_right = -40.0
margin_bottom = -64.0

[node name="Panel" type="Panel" parent="TextBoxContainer"]
margin_right = 944.0
margin_bottom = 136.0
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="TextBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Panel" type="Panel" parent="TextBoxContainer/Panel/MarginContainer"]
visible = false
margin_right = 928.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxContainer/Panel/MarginContainer"]
margin_right = 928.0
margin_bottom = 120.0

[node name="Start" type="Label" parent="TextBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 32.0
rect_min_size = Vector2( 14, 32 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "*"

[node name="Body" type="Label" parent="TextBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 910.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 914.0
margin_top = 88.0
margin_right = 928.0
margin_bottom = 120.0
rect_min_size = Vector2( 14, 32 )
size_flags_vertical = 12
custom_fonts/font = ExtResource( 5 )
text = "V"

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
